--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,15 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+#http proxy setup
+#systemProp.http.proxyHost=10.9.16.155
+#systemProp.http.proxyPort=3128
+#systemProp.http.proxyUser=lariso
+#systemProp.http.proxyPassword=06Iterator
+
+#https proxy setup
+#systemProp.https.proxyHost=10.9.16.155
+#systemProp.https.proxyPort=3128
+#systemProp.https.proxyUser=lariso
+#systemProp.https.proxyPassword=06Iterator
