--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="multivac.app0">
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_myicon"
@@ -17,9 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SecondActivity"
-            android:parentActivityName = ".MainActivity">
-        </activity>
+        <activity
+            android:name=".SecondActivity"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".ThirdActivity"></activity>
     </application>
 
 </manifest>
